--- a/banmeshi/banmeshi/Info.plist
+++ b/banmeshi/banmeshi/Info.plist
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>请求获得相撤权限</string>
+	<key>NSCameraUsageDescription</key>
+	<string>请求获得相机权限</string>
+</dict>
 </plist>
