APIで取得したJSONメニューデータでDBに保存

--- a/banmeshi/Podfile
+++ b/banmeshi/Podfile
@@ -12,6 +12,7 @@ target 'banmeshi' do
   pod 'RxSwift'
   pod 'RxCocoa'
   pod 'SwiftCSVExport'
+  pod 'Alamofire'
 
   target 'banmeshiTests' do
     inherit! :search_paths
